--- a/app/styles/app.tns.scss
+++ b/app/styles/app.tns.scss
@@ -1,5 +1,9 @@
+/*
+    This file is imported from app/app.scss in nativescript mode
+*/
+
 @import 'styles/_variables.scss';
 
 .h1 {
-    color: $primary-color;
+    color: $brand-color;
 }
