--- a/app/client/components/menu/menu.component.tns.html
+++ b/app/client/components/menu/menu.component.tns.html
@@ -3,8 +3,8 @@
     <GridLayout class="backdrop open-backdrop" width="100%" height="100%" (tap)="close.emit(false)"></GridLayout>
     <GridLayout left="0" class="sideDrawer open-sidedrawer">
         <StackLayout>
-            <Button (tap)="menuItemTap('./home')" text="Home"></Button>
-            <Button (tap)="menuItemTap('./products')" text="Products"></Button>
+            <Button (tap)="menuItemTap('home')" text="Home"></Button>
+            <Button (tap)="menuItemTap('products')" text="Products"></Button>
         </StackLayout>
     </GridLayout>
 </AbsoluteLayout>
