--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -2,4 +2,9 @@
     This file is shared between platforms
 */
 
-$brand-color : hotpink;
+$brand-color : #725ac1;
+$light-brand-color: #e2ddff;
+$dark-bg: #242038;
+$light-bg: #8d86c9;
+$dark-font: #242038;
+$light-font: #e2ddff;
