--- a/app/client/components/menu/menu.component.tns.scss
+++ b/app/client/components/menu/menu.component.tns.scss
@@ -1,3 +1,4 @@
+@import 'styles/_variables.scss';
 
 // @keyframes open-sidedrawer {
 //     0% { transform: translate(-130, 0) }
@@ -50,3 +51,19 @@
 //     animation-iteration-count: 1;
 //     animation-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
 // }
+
+
+
+.menu-button{
+    background-color: transparent;
+    color: $brand-color;
+    border-color: transparent;
+    height: 50;
+}
+
+.menu-button-selected{
+    background-color: $brand-color;
+    color: $light-brand-color;
+    border-color: transparent;
+    height: 50;
+}
