--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -5,6 +5,6 @@
 $brand-color : #725ac1;
 $light-brand-color: #e2ddff;
 $dark-bg: #242038;
-$light-bg: #8d86c9;
+$light-bg: #ffffff;
 $dark-font: #242038;
-$light-font: #e2ddff;
+$light-font: #ffffff;
