--- a/app/styles/app.web.scss
+++ b/app/styles/app.web.scss
@@ -7,3 +7,19 @@
 h1 {
     color: $brand-color;
 }
+
+// .home-div{
+//     background-color: $light-bg;
+// }
+
+// .button{
+//     background-color: transparent;
+//     color: $light-font;
+//     border-radius: 10;
+//     border-color: $light-font;
+//     border-width: 2;
+// }
+
+// .page{
+//     background-color: $dark-bg;
+// }
