--- a/app/client/components/menu/menu.component.tns.html
+++ b/app/client/components/menu/menu.component.tns.html
@@ -1,5 +1,5 @@
 <GridLayout columns="*,*" height="50">
-        <Button #homeButton col="0" [nsRouterLink]="['/home']" text="Home" [class]="isRouterLinkActive('/home') ? 'menu-button-selected' : 'menu-button'"></Button>
-        <Button #productsButton col="1" [nsRouterLink]="['/products']" text="Products" [class]="isRouterLinkActive('/products') ? 'menu-button-selected' : 'menu-button'"></Button>
+        <Button #homeButton col="0" [nsRouterLink]="['/home']" text="Home" [class]="isRouterLinkActive('/home') ? 'menu-button selected' : 'menu-button unselected'"></Button>
+        <Button #productsButton col="1" [nsRouterLink]="['/products']" text="Products" [class]="isRouterLinkActive('/products') ? 'menu-button selected' : 'menu-button unselected'"></Button>
 </GridLayout>
 
