+Web app design (provisional)

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,7 +1,7 @@
 /*
     This file is shared between platforms
 */
-
+$dark-brand-color: #57468e ;
 $brand-color : #725ac1;
 $light-brand-color: #e2ddff;
 $dark-bg: #242038;
