--- a/app/styles/app.tns.scss
+++ b/app/styles/app.tns.scss
@@ -23,7 +23,7 @@
 }
 
 .product{
-    background-color: $light-bg;
+    background-color: $card-bg;
     color: $dark-font;
     margin: 2;
     border-radius: 10;
