--- a/app/client/components/menu/menu.component.web.html
+++ b/app/client/components/menu/menu.component.web.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-dark navbar-custom-brand">
-    <a class="navbar-brand nav-link" routerLink="/home" routerLinkActive="active">Monomorphic seed <span class="sr-only">(current)</span></a>
+    <a class="navbar-brand nav-link" routerLink="/home" routerLinkActive="active">Polymorphic seed <span class="sr-only">(current)</span></a>
     <div class="nav navbar-nav">
+        <a class="nav-item nav-link" routerLink="/home" routerLinkActive="active">Home</a>
         <a class="nav-item nav-link" routerLink="/products" routerLinkActive="active">Products</a>
     </div>
 </nav>
