--- a/app/styles/app.tns.scss
+++ b/app/styles/app.tns.scss
@@ -1,53 +1,46 @@
 /*
     This file is imported from app/app.scss in nativescript mode
 */
-
 @import 'styles/_variables.scss';
+// Bootstrap map
+@import '../node_modules/nativescript-theme-core/bootstrap-map.scss';
 
-.h1 {
-    font-size: 30;
+.android {
+    @import '../node_modules/nativescript-theme-core/core.light.android.scss';
 }
 
-.h2 {
-    font-size: 15;
+.ios {
+    @import '../node_modules/nativescript-theme-core/core.light.ios.scss';
 }
 
-.action-bar{
-        color: $light-brand-color;
-        background-color: $brand-color;
+.title {
+    color: $gray-lightest;
+    font-size: 34;
 }
 
-.page{
-    background-color: $light-bg;
-    color: $dark-font;
+.bg-gray {
+    background-color: $gray-lighter;
 }
 
-.product{
-    background-color: $card-bg;
-    color: $dark-font;
-    margin: 2;
-    border-radius: 10;
-    padding: 10;
+.border-gray {
+    border-color: $gray-light;
 }
 
-.bold{
-    font-weight: bold;
+.border-1 {
+    border-width: 1;
 }
 
-.button{
-    background-color: transparent;
-    color: $dark-font;
-    border-radius: 10;
-    border-color: $dark-bg;
-    border-width: 2;
-    margin: 2;
+.fade-in {
+    animation-name: fade-in;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
 }
 
-.product-button{
-    background-color: transparent;
-    color: $dark-font;
-    border-radius: 10;
-    border-color: $dark-bg;
-    border-width: 2;
-    margin: 5;
+@keyframes fade-in {
+    	from{
+                    opacity: 0;
+        }
+        100%{
+                    opacity: 1;
+        }
 }
